@@ -30,8 +30,10 @@ bzr-builddeb (2.5.1) UNRELEASED; urgency=low
   * If possible use uscan to find the latest upstream version string.
     LP: #295274
   * Add --snapshot option to merge-upstream.
+  * 'bzr merge-upstream' now also works in merge mode, and will simply
+    add a new entry for new upstream versions.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Sun, 23 Jan 2011 21:35:21 -0800
+ -- Jelmer Vernooij <jelmer@debian.org>  Sun, 23 Jan 2011 21:57:08 -0800
 
 bzr-builddeb (2.5) unstable; urgency=low
 
